plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version "0.0.11"
}

application {
    mainClass = 'client.Main'
}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.media' ]
}

java {
	sourceCompatibility = '21'
}


dependencies {
	implementation project(":commons")

	implementation 'javax.websocket:javax.websocket-api:1.1'

	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
	
	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
	
	implementation 'com.google.inject:guice:6.0.0'
	implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'

	implementation 'org.openjfx:javafx-controls:21.0.2'
	implementation 'org.openjfx:javafx-fxml:21.0.2'

	implementation 'org.controlsfx:controlsfx:11.2.0'

	implementation 'org.springframework:spring-core:6.1.3'

	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.2.5'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0-rc1'

	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.5'
	implementation 'org.springframework:spring-context-support:6.1.5'

}